--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -150,6 +150,11 @@
     </div>
   </div>
 
+    <div id="feedback">
+      <a href="" ng-click="openFeedback()">
+        {% trans "Napište nám"%}
+      </a>
+    </div>
     <div id="footer">
       {% if LANGUAGE_CODE == "cs" %}
       <a href="#/about">{% trans "O projektu" %}</a> 
