--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -61,6 +61,32 @@ h1, h2, h3
   text-shadow: none
   width: 100%
 
+#feedback 
+  position: fixed 
+  top: 250px 
+  left: -50px
+  z-index: 999 
+  a 
+    transform: rotate(-90deg) 
+    -webkit-transform: rotate(-90deg) 
+    -moz-transform: rotate(-90deg) 
+    -o-transform: rotate(-90deg) 
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3) 
+    display: inline-block 
+    width: 140px
+    background: #428bca
+    padding: 8px 16px 
+    color: #fff 
+    text-decoration: none 
+    border: 1px solid transparent
+    border-radius: 0 0 4px 4px
+    border-color: #285e8e
+    padding: 6px 12px
+    text-align: center
+    font-size: 1.3em
+    &:hover
+      background-color: #3071a9
+      border-color: #285e8e
 
 #___plusone_0 iframe
   position: relative !important
@@ -86,11 +112,14 @@ h1, h2, h3
     .container
       max-width: 1170px
       width: 100% 
-    
+
 @media (min-width: 1170px)
   .btn-huge
     margin: 1%
 
+@media (max-width: 992px)
+  #feedback
+    display: none
 
 @media (max-width: 767px)
   .welcome-page
