Login tooltip: use bootstrap again

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -85,9 +85,9 @@
                 <li class="dropdown" ng-show="user.username === ''" >
                   <a href="" 
                      role="button" 
-                     class="dropdown-toggle drop-login"
-                     tooltip="{% trans "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště." %}"
-                     tooltip-placement="bottom"
+                     class="dropdown-toggle drop-login atooltip"
+                     title="{% trans "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště." %}"
+                     container="body"
                      data-toggle="dropdown">
                     {% trans "Přihlásit se" %} <b class="caret"></b>
                   </a>
