Create user profile page with personal goals

--- a/main/geography/static/sass/_overview.sass
+++ b/main/geography/static/sass/_overview.sass
@@ -17,8 +17,9 @@
   padding-bottom: 30px
   .inline-block
     margin: 5px
-    .btn
+    .btn-primary
       min-width: 100px
+    .btn
       border-bottom-left-radius: 0
       border-bottom-right-radius: 0
     .progress, .progress-bar
