--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -69,6 +69,13 @@ ul.dropdown-menu.login
 html, body
   height: 100%
 
+dl
+  margin-bottom: 5px
+
+dt, dd
+  display: inline-block
+  padding-right: 10px
+
 #wrap 
   min-height: 100%
   padding-bottom: 30px
@@ -113,3 +120,39 @@ html, body
 
 .modal-backdrop.fade.in
   background: rgba(0, 0, 0, 0.8)
+
+.modal-dialog
+  margin-top: 60px
+
+.overview
+  h2
+    .glyphicon-plus-sign
+      cursor: pointer
+      &:hover
+        opacity: 0.8
+.overview .goal 
+  h3
+    margin-bottom: 10px
+  .btn-group
+    margin-bottom: 10px
+  .progress
+    margin: 0
+
+.start-date 
+  margin-right: 5px
+
+.finish-date 
+  margin-left: 5px
+
+.map-select
+  width: 48%
+  display: inline-block
+
+.layer-select
+  float: right
+
+.icon-loading
+  display: inline-block
+  height: 14px
+  width: 14px
+  background: url(../img/ajax-loader-small.gif) no-repeat center
