User profile: share buttons

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -156,3 +156,15 @@ dt, dd
   height: 14px
   width: 14px
   background: url(../img/ajax-loader-small.gif) no-repeat center
+
+.fb-share-button
+  margin: 10px
+  margin-top: 0px
+
+.g-plus-wrapper
+  vertical-align: middle
+  display: inline-block
+  padding: 5px 30px 0 30px
+
+.share-input
+  line-height: 18px
