UI example images on homepage

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -41,6 +41,10 @@
       float: left
       margin-right: 15px
       margin-left: -10px
+  img
+    display: block
+    max-width: 100%
+    margin-top: 10px
 
 .navbar 
   margin-bottom: 0px
