Homepage background map outline

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -1,5 +1,10 @@
 .welcome-page.jumbotron
   background-color: #73c5ef
+  background-image: url(/static/img/world-outline.png)
+  background-size: contain
+  background-repeat: no-repeat
+  background-position: top center
+  
   color: white
   padding-left: 20px
   padding-right: 20px
