Don't resize navbar when loading.

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -102,6 +102,9 @@ h1, h2, h3
   position: relative !important
   top: 6px !important
 
+.navbar
+  min-height: 53px
+
 @media (min-width: 467px)
   .btn-huge
     width: 46%
