Optimize homepage images

--- a/main/geography/static/sass/_map-container.sass
+++ b/main/geography/static/sass/_map-container.sass
@@ -1,12 +1,9 @@
 $map-height:500px
 
 .map-container
-  background-color: #73c5ef
-  background: -  #34DDDD
+  background-color: #66ccff
   color: white
-
   position: relative
-
   h1
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8), 0 0 0px rgba(0, 0, 0, 0.075)
     position: absolute
