--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -1,5 +1,5 @@
 .welcome-page.jumbotron
-  background-color: #73c5ef
+  background-color: #66ccff
   background-image: url(/static/img/world-outline.png)
   background-size: contain
   background-repeat: no-repeat
