Footer link to umimecesky.cz

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -176,6 +176,7 @@
    {% if LANGUAGE_CODE == "cs" %}
       &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
       Vyzkoušejte také <a href="http://slepaanatomie.cz" target="_blank">Slepou Anatomii</a>
+      a <a href="http://umimecesky.cz" target="_blank">Umíme česky</a>
     {% endif %}
 
     <script type="text/ng-template" id="feedback_modal.html">
