Color scheme unified

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -1,5 +1,6 @@
 $learned: #0d0
-$practiced: #ff0
+$practiced: #fe3
+$unlearned: #e23
 
 body
   overflow-y: scroll
@@ -111,6 +112,9 @@ dt, dd
 
 .progress-bar-practiced
   background-color: $practiced
+
+.progress-bar-unlearned
+  background-color: $unlearned
 
 .color-indicator.learned
   background-color: $learned
