--- a/main/geography/static/sass/_overview.sass
+++ b/main/geography/static/sass/_overview.sass
@@ -55,10 +55,10 @@
   border-radius: 0
   background-color: #ddd
   .progress-bar
-    background-color: #0dde00
+    background-color: $learned
 
 .level-start
-  background-color: #0dde00
+  background-color: $learned 
 
 .level-goal
   background-color: #ddd
