Unify green colors across different views

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -1,4 +1,4 @@
-$learned: #0d0
+$learned: #0c0
 $practiced: #fe3
 $unlearned: #e23
 
@@ -118,6 +118,12 @@ dt, dd
 
 .color-indicator.learned
   background-color: $learned
+
+.label-learned
+  background-color: $learned
+
+.label-unlearned
+  background-color: $unlearned
 
 .color-indicator.practiced
   background-color: $practiced
