Add level progress bar to practice summary page

--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -42,3 +42,9 @@
   .practice
     h2
       padding-left: 10px
+
+.summary-progress
+  margin-top: 6px
+
+.summary .level-wrapper
+  text-align: right
