--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -178,3 +178,29 @@ dt, dd
 
 .share-input
   line-height: 18px
+
+.level-wrapper
+  margin-bottom: 15px
+  text-align: center
+
+.level-progress
+  width: 80% 
+  display: inline-block
+  margin: 0px -4px -5px -4px
+  border-radius: 0
+  background-color: #ddd
+  .progress-bar
+    background-color: $learned
+
+.level-start
+  background-color: $learned 
+
+.level-goal
+  background-color: #ddd
+  color: rgba(0,0,0,0.4)
+
+.level-start, .level-goal
+  font-size: 17px
+  line-height: 150%
+  border-radius: 50%
+  width: 32px
