Improve progress bar width

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -185,6 +185,7 @@ dt, dd
 
 .level-progress
   width: 80% 
+  width: calc(100% - 56px)
   display: inline-block
   margin: 0px -4px -5px -4px
   border-radius: 0
