"My mistakes" feature: not accessible from the UI yet. #96

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -148,6 +148,17 @@ dt, dd
   .progress
     margin: 0
 
+
+.confused
+  padding: 5px
+  .progress
+    margin: 0
+  .label
+    margin: 0
+.confused:nth-child(even)
+  background: rgba(0,0,0,0.1)
+  
+
 .start-date 
   margin-right: 5px
 
