--- a/main/geography/static/sass/_responsive.sass
+++ b/main/geography/static/sass/_responsive.sass
@@ -36,3 +36,16 @@
       margin-top: 20px
   .quesions-progress
     margin-bottom: 0
+
+  .confused
+    .btn 
+      margin-bottom: 5px
+    .progress
+      clear: both
+      margin-bottom: -15px
+      height: 20px
+    .progress-bar
+      line-height: 20px
+    .label
+      margin-left: -15px
+
