Mistakes feature tweaked, translated and added to menu.  Closes #96 Also a bit of sass refactoring

--- a/main/geography/static/sass/app.sass
+++ b/main/geography/static/sass/app.sass
@@ -3,7 +3,9 @@
 @import "flags"
 @import "bootstrap-fixes"
 @import "global"
+@import "widgets"
 
+@import "profile"
 @import "overview"
 @import "welcome-page"
 @import "map-container"
