--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -116,6 +116,12 @@
                         {% trans "Můj profil" %}
                       </a>
                     </li>
+                    <li>
+                      <a href="#/confused/" >
+                        <i class="glyphicon glyphicon-remove-sign"></i> 
+                        {% trans "Moje časté chyby" %}
+                      </a>
+                    </li>
                     <li class="forgot-pwd">
                       <a href="#/" ng-click="logout()">
                         <i class="glyphicon glyphicon-log-out"></i> 
