Turn on HTML5 history API in AngularJS locationProvider

--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -33,14 +33,6 @@ ul.dropdown-menu.login
   .map-container
     background: url(../img/flower_bg.jpg) bottom right
 
-.loading-indicator
-  background: url(../img/ajax-loader.gif) no-repeat center
-  min-height: 128px
-  width: 100%
-  height: 100%
-  margin-top: 30px
-  margin-bottom: 60px
-
 #container
   margin-left: auto
   margin-right: auto
@@ -68,7 +60,8 @@ dt, dd
   min-height: 100%
   padding-bottom: 30px
 
-#footer
+div#footer
+  display: block
   background-color: #34495e
   color: #eee
   text-align: center
