--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -105,6 +105,18 @@ h1, h2, h3
 .navbar
   min-height: 53px
 
+#footer
+  display: none
+
+.loading-indicator
+  background: url(/static/img/ajax-loader.gif) no-repeat center
+  min-height: 128px
+  width: 100%
+  height: 100%
+  margin-top: 30px
+  margin-bottom: 60px
+
+
 @media (min-width: 467px)
   .btn-huge
     width: 46%
