--- a/main/geography/static/sass/_profile.sass
+++ b/main/geography/static/sass/_profile.sass
@@ -19,8 +19,7 @@
     margin-left: 5px
 
 .fb-share-button
-  margin: 10px
-  margin-top: 0px
+  margin-bottom: 10px
 
 .g-plus-wrapper
   vertical-align: middle
