--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -3,6 +3,9 @@
     margin-left: 10px
     margin-bottom: 10px
 .practice
+  overflow: hidden
+  position: relative
+  min-height: 290px
   .btn
     margin-left: 10px
     margin-bottom: 10px
@@ -48,3 +51,53 @@
 
 .summary .level-wrapper
   text-align: right
+
+@-webkit-keyframes slideIn 
+  from 
+    left: 100%
+  to
+    left: 0
+@-webkit-keyframes slideOut
+  from 
+    left: 0
+  to
+    left: -100%
+@-moz-keyframes slideIn 
+  from 
+    left: 100%
+  to
+    left: 0
+@-moz-keyframes slideOut
+  from 
+    left: 0
+  to
+    left: -100%
+@keyframes slideIn 
+  from 
+    left: 100%
+  to
+    left: 0
+@keyframes slideOut
+  from 
+    left: 0
+  to
+    left: -100%
+
+.inner-practice
+  position: absolute
+  min-height: 290px
+  background-color: #fff
+  width: 100%
+  -webkit-animation: slideIn .3s ease-out
+  -moz-animation: slideIn .3s ease-out
+  animation: slideIn .3s ease-out
+
+.slide-out
+  -webkit-animation: slideOut .3s ease-out
+  -moz-animation: slideOut .3s ease-out
+  animation: slideOut .3s ease-out
+
+@media (max-width: 767px)
+  .practice, .practice-inner
+    min-height: 150px 
+
