Add goal progress bar to practice summary

--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -21,6 +21,8 @@
     span
       float: left
       margin-right: 20px
+  .goal-progress
+    margin-top: 5px
 
 .quesions-progress
   border-radius: 0
@@ -96,8 +98,3 @@
   -webkit-animation: slideOut .3s ease-out
   -moz-animation: slideOut .3s ease-out
   animation: slideOut .3s ease-out
-
-@media (max-width: 767px)
-  .practice, .practice-inner
-    min-height: 150px 
-
