--- a/main/geography/static/sass/_widgets.sass
+++ b/main/geography/static/sass/_widgets.sass
@@ -7,6 +7,12 @@
 .progress-bar-unlearned
   background-color: $unlearned
 
+.goal-progress
+  .progress-bar-learned
+    border-top: 10px solid $learned
+  .progress-bar-unlearned
+    border-top: 10px solid $unlearned
+
 .color-indicator.learned
   background-color: $learned
 
