Polish question change animation

--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -56,34 +56,46 @@
 
 @-webkit-keyframes slideIn 
   from 
-    left: 100%
+    opacity: 0
+    left: 10%
   to
     left: 0
+    opacity: 1
 @-webkit-keyframes slideOut
   from 
     left: 0
+    opacity: 1
   to
-    left: -100%
+    left: -10%
+    opacity: 0
 @-moz-keyframes slideIn 
   from 
-    left: 100%
+    opacity: 0
+    left: 10%
   to
     left: 0
+    opacity: 1
 @-moz-keyframes slideOut
   from 
     left: 0
+    opacity: 1
   to
-    left: -100%
+    opacity: 0
+    left: -10%
 @keyframes slideIn 
   from 
-    left: 100%
+    opacity: 0
+    left: 10%
   to
     left: 0
+    opacity: 1
 @keyframes slideOut
   from 
     left: 0
+    opacity: 1
   to
-    left: -100%
+    opacity: 0
+    left: -10%
 
 .inner-practice
   position: absolute
