Practice: fix styles in horizontal view

--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -29,25 +29,6 @@
   height: 10px
   margin-bottom: 15px
 
-.horizontal
-  .map-container
-    width: 70%
-    float: left
-  #container
-    width: 30%
-    float: right
-    .col-sm-7, .col-sm-5
-      width: 100%
-      padding: 0
-      margin-top: 30px
-    .label
-      white-space: normal
-    .btn
-      display: block
-  .practice
-    h2
-      padding-left: 10px
-
 .summary-progress
   margin-top: 6px
 
@@ -110,3 +91,26 @@
   -webkit-animation: slideOut .3s ease-out
   -moz-animation: slideOut .3s ease-out
   animation: slideOut .3s ease-out
+
+.horizontal
+  .map-container
+    width: 70%
+    float: left
+  #container
+    width: 30%
+    float: right
+    .col-sm-7, .col-sm-5
+      width: 100%
+      padding: 0
+      margin-top: 30px
+    .label
+      white-space: normal
+    .btn
+      display: block
+  .practice
+    min-height: 690px
+    h2
+      padding-left: 10px
+  .inner-practice
+    min-height: 690px
+
