--- a/main/geography/static/sass/_preview-map.sass
+++ b/main/geography/static/sass/_preview-map.sass
@@ -18,6 +18,7 @@
     margin-bottom: 0px
     padding-bottom: 0px
   .collapse-control
+    margin: 0px -15px 0px -15px
     background: rgba(0,0,0,0.15)
     &:hover
       background: rgba(0,0,0,0.2)
@@ -30,20 +31,39 @@
       i
         visibility: visible
     .btn
-      font-size: 16px
+      font-size: 12px
       margin: 0
       font-weight: bold
       i
         visibility: visible
-  .collapse-control-inner
-    margin: 0px -15px 0px -15px
-    .btn
-      font-size: 12px
     
   h2, h3
     margin: 0px
     display: inline
 
+.layers-tabs
+  background: rgba(0,0,0,0.2)
+  padding-bottom: 10px
+  .tab
+    cursor: pointer
+    color: #999
+    background: rgba(255,255,255,0.4)
+    overflow: auto
+    &:hover
+      color: #000
+      background: rgba(0,0,0,0.0)
+    &.active
+      color: #000
+      cursor: initial
+      background: rgba(0,0,0,0.0)
+    .btn
+      font-size: 16px
+      margin-top: 15px
+      font-weight: bold
+    h2
+      max-height: 30px
+      overflow: hidden
+  
 
 $anim-time: 0.5s
 
