--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -146,7 +146,7 @@
                     {% for lang in LANGUAGES %}
                     <li>
                       <a class="menu-link" location-append href="/{{ lang.0 }}/">
-                        <i class="flag-{{ lang.0 }}"></i> {% trans lang.1 %}
+                        <i class="flag-{{ lang.0 }}"></i> {{ lang.1 }}
                       </a>
                     </li>
                     {% endfor %}
