--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -171,11 +171,8 @@
      {% endif %}
     </div>
   </div>
+    {% include "feedback.html" %}
 
-    <div id="feedback">
-      <a href="" ng-click="openFeedback()">
-        {% trans "Napište nám"%}
-      </a>
     </div>
     <div id="footer">
       {% if LANGUAGE_CODE == "cs" %}
@@ -194,35 +191,6 @@
       Vyzkoušejte také <a href="http://slepaanatomie.cz" target="_blank">Slepou Anatomii</a>
       a <a href="http://umimecesky.cz" target="_blank">Umíme česky</a>
     {% endif %}
-
-    <script type="text/ng-template" id="feedback_modal.html">
-        <div class="modal-header">
-            <h3 class="modal-title">{% trans "Napište nám"%}</h3>
-        </div>
-        <div class="modal-body">
-            <label>
-              {% trans "Feedback text label"%}
-            </label>
-            <textarea ng-model="feedback.text" class="form-control" rows="8" ></textarea>
-            <label>
-              {% trans "Vaše emailová adresa (nepovinné)"%}
-            </label>
-            <input type="text" ng-model="feedback.email" class="form-control"/>
-            <br>
-            {%verbatim%}
-            <alert ng-repeat="alert in alerts" type="{{alert.type}}"
-            close="closeAlert($index)">{{alert.msg}}</alert>
-            {%endverbatim%}
-        </div>
-        <div class="modal-footer">
-            <button ng-disabled="sending" class="btn btn-primary" ng-click="send()">
-              {% trans "Odeslat"%}
-            </button>
-            <button class="btn btn-danger" ng-click="cancel()">
-              {% trans "Zavřít"%}
-            </button>
-        </div>
-    </script>
 
     <script type="text/ng-template" id="add_goal_modal.html">
       <form ng-submit="send()" name="add_goal" novalidate>
