--- a/main/geography/static/sass/_global.sass
+++ b/main/geography/static/sass/_global.sass
@@ -64,15 +64,17 @@ div#footer
   display: block
   background-color: #34495e
   color: #eee
-  text-align: center
   clear: both
   position: relative
   z-index: 10
   margin-top: -60px
-  padding: 20px
+  padding-top: 50px
+  padding-bottom: 20px
   min-height: 30px
-  a
+  li a
     color: rgb(82, 186, 255) 
+    padding: 4px 0
+    display: block
 
 #ng-view
   position: relative
