--- a/main/proso_feedback/templates/feedback.html
+++ b/main/proso_feedback/templates/feedback.html
@@ -1,5 +1,5 @@
  {% load i18n %}
-<div id="feedback" feedback email="{{user.email}}">
+<div id="feedback" feedback email="{{user.email|default_if_none:''}}">
   <a href="" ng-click="openFeedback()">
     {% trans "Napište nám"%}
   </a>
@@ -27,6 +27,34 @@
         <button ng-disabled="sending" class="btn btn-primary" ng-click="send()">
           {% trans "Odeslat"%}
         </button>
+        <button class="btn btn-danger" ng-click="cancel()">
+          {% trans "Zavřít"%}
+        </button>
+    </div>
+</script>
+
+<script type="text/ng-template" id="rating_modal.html">
+    <div class="modal-header text-center">
+        <h3 class="modal-title">{% trans "Jak těžké jsou kladené otázky?"%}</h3>
+    </div>
+    <div class="rating modal-body">
+      <div class=" text-center" ng-hide="answer">
+        <a class="btn btn-lg btn-success" ng-click="vote(1)">
+          {% trans "Příliž lehké"%}
+        </a>
+        <a class="btn btn-lg btn-primary" ng-click="vote(2)">
+          {% trans "Tak akorát"%}
+        </a>
+        <a class="btn btn-lg btn-danger" ng-click="vote(3)">
+          {% trans "Příliž těžké"%}
+        </a>
+      </div>
+      {%verbatim%}
+      <alert ng-repeat="alert in alerts" type="{{alert.type}}"
+      close="closeAlert($index)">{{alert.msg}}</alert>
+      {%endverbatim%}
+    </div>
+    <div class="modal-footer" ng-show="answer">
         <button class="btn btn-danger" ng-click="cancel()">
           {% trans "Zavřít"%}
         </button>
