Set up Google Analytics A/B experiment.

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -95,7 +95,9 @@
                      title="{% trans "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště." %}"
                      container="body"
                      data-toggle="dropdown">
-                    {% trans "Přihlásit se" %} <b class="caret"></b>
+                    {% trans "Přihlásit se" %}
+                    <span variation="1"> / {% trans "Registrovat se" %} </span>
+                    <b class="caret"></b>
                   </a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop-login">
                     <li>
