--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -86,7 +86,7 @@
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right"
-                ng-init="initUser('{{user.username}}',{{user.points}}, '{{user.answered_count}}', '{{user.email}}')">
+                ng-init="initUser('{{user.username}}',{{user.points}}, {{user.answered_count}}, '{{user.email}}')">
                 <li class="dropdown" ng-show="user.username === ''" >
                   <a href="" 
                      role="button" 
