Feedback email: in html version convert newlines to <br>

--- a/main/proso_feedback/templates/emails/feedback.html
+++ b/main/proso_feedback/templates/emails/feedback.html
@@ -5,7 +5,8 @@
 </head>
 
 <body>
-    <b>feedback:</b> {{ feedback.text }}<br/>
+    <b>feedback:</b> <br/>
+    {{ feedback.text | linebreaksbr }}<br/>
 
     <br/><br/>
     <b>email:</b> {{ feedback.email }}<br/>
