Fix typo in difficulty rating poll

--- a/main/proso_feedback/templates/feedback.html
+++ b/main/proso_feedback/templates/feedback.html
@@ -42,13 +42,13 @@
     <div class="rating modal-body">
       <div class=" text-center" ng-hide="answer">
         <a class="btn btn-lg btn-success" ng-click="vote(1)">
-          {% trans "Příliž lehké"%}
+          {% trans "Příliš lehké"%}
         </a>
         <a class="btn btn-lg btn-primary" ng-click="vote(2)">
           {% trans "Tak akorát"%}
         </a>
         <a class="btn btn-lg btn-danger" ng-click="vote(3)">
-          {% trans "Příliž těžké"%}
+          {% trans "Příliš těžké"%}
         </a>
       <a class="pull-right" href="" ng-click="cancel()">
         {% trans "Nevím / nechci odpovídat"%}
