requirelogin url parameter

--- a/main/geography/static/sass/_social.sass
+++ b/main/geography/static/sass/_social.sass
@@ -2,6 +2,7 @@
 [class^="social-"], [class*=" social-"]
   background: url(../img/social.png) no-repeat top left
   display: inline-block
+  vertical-align: middle
 
 .social-aim
   background-position: 0 0
