E-mail login/signup. #103

--- a/main/geography/static/sass/_welcome-page.sass
+++ b/main/geography/static/sass/_welcome-page.sass
@@ -48,8 +48,10 @@
       margin-left: -10px
   img
     display: block
-    max-width: 100%
     margin-top: 10px
+
+img
+  max-width: 100%
 
 .navbar 
   margin-bottom: 0px
