--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -91,30 +91,12 @@
                   <a href="" 
                      role="button" 
                      track-click="login"
-                     class="dropdown-toggle drop-login atooltip"
+                     class="drop-login atooltip"
                      title="{% trans "Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště." %}"
                      container="body"
-                     data-toggle="dropdown">
+                     ng-click="loginModal.open(user)" >
                     {% trans "Přihlásit se" %}
-                    <span variation="1"> / {% trans "Registrovat se" %} </span>
-                    <b class="caret"></b>
                   </a>
-                  <ul class="dropdown-menu login" role="menu" aria-labelledby="drop-login">
-                    <li>
-                      <a class="btn btn-danger btn-lg btn-block"
-                        track-click="login"
-                        href="/login/google/">
-                        <i class="social-google"></i> {% trans "přes Google" %}
-                      </a>
-                    </li>
-                    <li>
-                      <a class="btn btn-primary btn-lg btn-block"
-                        track-click="login"
-                        href="/login/facebook/">
-                        <i class="social-facebook"></i>{% trans "přes Facebook" %}
-                      </a>
-                    </li>
-                  </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username !== ''">
                   <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
@@ -147,7 +129,7 @@
               <li class="dropdown">
                 <a href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
                   <i class="flag-{{ LANGUAGE_CODE}}"></i> <b class="caret"></b>
-                  <input type="hidden" ng-init="LANGUAGE_CODE='{{ LANGUAGE_CODE }}'"/>
+                  <input type="hidden" ng-init="initLanguageCode('{{ LANGUAGE_CODE }}')"/>
                 </a>
                 <ul class="dropdown-menu">
                     {% for lang in LANGUAGES %}
