Add link to personal goals to user menu and practice summary. #103

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -115,6 +115,11 @@
                       </a>
                     </li>
                     <li>
+                      <a href="#/goals/" >
+                        {% trans "Osobní cíle" %}
+                      </a>
+                    </li>
+                    <li>
                       <a href="#/u/{{user.username}}?edit=true" >
                         {% trans "Nastavení" %}
                       </a>
