--- a/main/proso_goals/templates/emails/goal_reminder.html
+++ b/main/proso_goals/templates/emails/goal_reminder.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>
-  {% trans 'Slepé mapy' %} -
+  {% trans 'Slepé Mapy' %} -
   {% trans 'Osobní cíle' %} 
     </title>
     <style>
