--- a/main/geography/static/sass/_practice.sass
+++ b/main/geography/static/sass/_practice.sass
@@ -13,6 +13,7 @@
     font-size: 25px
     font-weight: bold
     padding-left: 30px
+    margin-bottom: 10px
     .label
       font-size: 20px
       line-height: 25px
