Homepage footer: add FI logo

--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -169,7 +169,7 @@
 
     <div class="" id="footer">
       <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
-        <span class="col-sm-4">
+        <span class="col-sm-3">
         <ul>
           {% if LANGUAGE_CODE == "cs" %}
           <li>
@@ -189,7 +189,7 @@
           </li>
         </ul>
         </span>
-        <span class="col-sm-4">
+        <span class="col-sm-3">
          {% if LANGUAGE_CODE == "cs" %}
               <div>
                 Vyzkoušejte také:
@@ -210,9 +210,13 @@
             </ul>
           {% endif %}
         </span>
-        <span class="col-sm-4">
-          <a href="http://www.fi.muni.cz/adaptivelearning/" class="pull-right">
+        <span class="col-sm-6">
+          <a href="http://www.fi.muni.cz/adaptivelearning/" class="">
             <img src="/static/img/al-logo-small.png" alt="Adaptive Learning logo"/>
+          </a>
+          <a href="http://www.fi.muni.cz/" class="">
+            <img src="/static/img/fi-logo.png" alt="FI MUNI logo"
+              height="80px"/>
           </a>
         </span>
       </div>
