Create goal modal: fix typo and close button

--- a/main/proso_goals/templates/create_goal.html
+++ b/main/proso_goals/templates/create_goal.html
@@ -61,11 +61,11 @@
         <button ng-disabled="sending"
           type="submit"
           class="btn btn-primary">
-          {% trans "Vytrvořit"%}
+          {% trans "Vytvořit"%}
         </button>
-        <button class="btn btn-danger" ng-click="cancel()" type="cancel">
+        <a class="btn btn-danger" ng-click="cancel()">
           {% trans "Zavřít"%}
-        </button>
+        </a>
     </div>
   </form>
 </script>
